Fix key issue when not using onPress, allow any version of RN, and finally fix the error in the README

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-native-image-slider",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "description": "A easy to use image slider for React Native",
   "main": "ImageSlider.js",
   "author": {
       "name": "Paul Sauve",
@@ -8,7 +9,11 @@
       "url": "https://paulb.gd"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PaulBGD/react-native-image-slider"
+  },
   "peerDependencies": {
-    "react-native": "^0.14.1"
+    "react-native": "*"
   }
 }
