--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "flow-bin": "^0.63.1",
-    "flow-typed": "^2.2.3"
+    "flow-typed": "^2.2.3",
+    "react-native-expo-image-cache": "2.0.3"
   }
 }
