Update deps. Update example.

--- a/example/package.json
+++ b/example/package.json
@@ -7,16 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "flow-bin": "^0.61.0",
-    "react": "16.2.0",
-    "react-native": "0.52.1",
+    "react": "16.8.3",
+    "react-native": "0.59.9",
     "react-native-image-slider": "file:.."
   },
   "devDependencies": {
-    "babel-jest": "22.1.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.1.4",
-    "react-test-renderer": "16.2.0"
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
