--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-image-slider",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "A easy to use image slider for React Native",
   "main": "ImageSlider.js",
   "author": {
@@ -22,8 +22,8 @@
   "peerDependencies": {
     "react-native": "*"
   },
-  "dependencies": {
-    "flow-bin": "^0.63.1",
-    "flow-typed": "^2.2.3"
+  "devDependencies": {
+    "flow-bin": "^0.101.1",
+    "flow-typed": "^2.5.2"
   }
 }
